...
    <string name="activities_task_angle_title">"Adjust your angles"</string>
    <string name="activities_task_angle_description">"Angle to fight plaque and brush your best."</string>
    <plurals name="earning_points_subtitle">
        <item quantity="one">"You earn %1$d point every time you brush."</item>
        <item quantity="other">"You earn %1$d points every time you brush."</item>
    </plurals>
    <string name="last_brushing_card_no_brushing">"No brushing session recorded"</string>
    <string name="profile_stats_card_current_points">"%d current points"</string>
    <string name="profile_stats_card_keep_earning_points">"Keep earning points and save more!"</string>
    <string name="profile_stats_card_offline_value">"%s Offline brushing"</string>
    <string name="profile_stats_card_inapp_value">"%s In-app brushing"</string>
    <string name="change_avatar_error_take_picture_result_not_ok">"Something went wrong when taking a picture"</string>
    <string name="change_avatar_error_select_gallery_result_not_ok">"Something went wrong when selecting a picture"</string>
    <string name="change_avatar_error_gallery_cant_load">"Something went wrong loading the picture from the gallery"</string>
    <string name="change_avatar_error_bitmap">"Something went wrong processing the picture"</string>
    <string name="onboarding_error_firstname_missing">"First name is missing"</string>
    <string name="onboarding_error_email_missing">"Email address is missing"</string>
...
    <string name="activities_guided_brushing_title">"Guided brushing"</string>
    <string name="activities_guided_brushing_description">"The best way to get results."</string>
    <string name="activities_guided_brushing_points">"+2 points"</string>
    <string name="home_screen_smile_points">"smile points"</string>
    <string name="profile_header_text">"Use your smile to change the world,
don’t let the world change your smile!"</string>
    <string name="profile_settings_button">"profile settings"</string>
    <string name="pairing_is_brush_ready_title">"Is your brush ready?"</string>
    <string name="pairing_is_brush_ready_subtitle">"Your brush needs to charge for 24 hours prior to using it for the first time."</string>
    <string name="pairing_is_brush_ready_connect">"yes, connect my brush"</string>
    <string name="pairing_is_brush_ready_help">"need more help"</string>
    <string name="onboarding_login_title">"Sign in"</string>
    <string name="onboarding_login_subtitle">"What's your email?"</string>
...
    <string name="pairing_model_mismatch_switch_app">"Switch to HUM App"</string>
    <string name="pairing_model_mismatch_continue_anyway">"Continue anyway"</string>
    <string name="pairing_scan_toothbrush_title">"Connect your toothbrush"</string>
    <string name="pairing_scan_toothbrush_description">"Searching for nearby toothbrushes"</string>
    <string name="earning_points_title">"earning smile points"</string>
    <string name="earning_points_detail_title">"HOW TO EARN &amp; REDEEM"</string>
    <string name="last_brushing_card_title">"my brushing sessions"</string>
    <string name="last_brushing_card_coverage">"Coverage"</string>
    <string name="last_brushing_card_duration">"Duration"</string>
    <string name="last_brushing_delete_button">"Delete brushing session"</string>
    <string name="profile_stats_card_offline_label">"Without using the app"</string>
    <string name="profile_stats_card_inapp_label">"Following an activity"</string>
    <string name="pairing_blink_toothbrush_led">"Blink"</string>
    <string name="settings_item_logout">"Log out"</string>
    <string name="checkup_coverage">"Coverage"</string>
...
    <string name="ota_blocker_not_active_connection">"Verify the connection with your brush"</string>
    <string name="ota_blocker_not_charging">"Please put your toothbrush on the charger to continue"</string>
    <string name="ota_blocker_not_enough_battery">"Please put your toothbrush on the charger to continue"</string>
    <string name="ota_blocker_no_internet">"The internet connection appears to be offline."</string>
    <string name="earning_points_detail_annotation">"*See our Rewards Terms &amp; Conditions for additional information.  A brushing session must achieve more than 50% coverage and last longer than 30 seconds to be eligible for smile points.  If you brush twice within 30 minutes we will combine the sessions and data into one recorded session."</string>
    <string name="earning_points_detail_annotation_highlight">"Rewards Terms &amp; Conditions"</string>
    <string name="profile_stats_card_lifetime_points">"%1$s Total smile points over time."</string>

    <!-- Title of the question of the day card -->
    <string name="question_of_the_day_card_title">"question of the day"</string>

    <!-- Points label displayed on the question of the day card -->
    <plurals name="question_of_the_day_card_points">
...
    <string name="product_support_card_subtitle">"Check our customers support center for common questions."</string>
    <string name="smiles_history_empty">"No smile points history yet. Win and synchronize your smile points to see the events."</string>
    <string name="oral_care_support_title">"oral care questions"</string>
    <string name="oral_care_support_subtitle">"Check our oral health care center for common questions."</string>
    <string name="settings_about_screen_licenses">"Licenses"</string>
    <string name="home_screen_no_internet">"no internet…"</string>
    <string name="profile_incomplete_bubble_header">"Complete your profile"</string>
    <string name="profile_incomplete_bubble_body">"We need more information in order to provide you with the most accurate results."</string>
    <string name="profile_incomplete_bubble_button">"Got it"</string>
    <string name="smiles_history_item_activity_completed">"Activity completed"</string>
    <string name="smiles_history_item_short_task_unknown">"Short task"</string>
    <string name="smiles_history_test_brushing">"Test brushing"</string>
    <string name="smiles_history_more_way_to_earn_smiles">"More ways to earn smile points"</string>
    <string name="dialog_low_battery_title">"low battery"</string>
    <string name="dialog_low_battery_description">"It looks like your brush %s is running on low battery. make sure to charge it soon."</string>
...
