...
      name="viewModel"
      type="com.kolibree.android.app.ui.home.tab.profile.ProfileViewModel" />

  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/profile_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.kolibree.android.app.ui.widget.ShadeView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:backgroundScrim="?colorPrimary"
      app:shadeExpandedHeight="@dimen/dot_oct" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/content_recyclerview"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:descendantFocusability="blocksDescendants"
      app:adapter="@{viewModel.cardHostViewModel.adapter}"
      app:diffConfig="@{viewModel.cardHostViewModel.diffConfig}"
      app:itemBinding="@{viewModel.cardHostViewModel.cardsBinding}"
...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/smiles_background" />

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?colorPrimary"
      android:clipChildren="false"
      android:clipToPadding="false"
      android:elevation="@dimen/dot_half"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:attr/actionBarSize"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="toolbar_placeholder" />

          <ImageView
            android:id="@+id/header_pattern"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_bg_profile_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

          <com.kolibree.android.app.ui.widget.BadgeImageView
            android:id="@+id/hum_profile_header_avatar"
            android:layout_width="@dimen/profile_header_avatar"
            android:layout_height="@dimen/profile_header_avatar"
            android:layout_marginTop="@dimen/dot_trip"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{v -> viewModel.onEditAvatarClicked()}"
            android:scaleType="centerCrop"
            app:badgeBorderWidth="@dimen/dot_quarter"
            app:badgeViewId="@id/avatar_badge"
            app:layout_constraintBottom_toTopOf="@id/hum_profile_header_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_barrier"
            app:layout_constraintVertical_chainStyle="packed"
            app:profileAvatarUrl="@{viewModel.avatarUrl}"
            app:profileName="@{viewModel.firstName}"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hum_profile_header_message"
            tools:backgroundTint="?colorPrimaryDark" />

          <include
            android:id="@+id/profile_complete_profile_bubble"
            layout="@layout/view_complete_profile_bubble"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dot_double"
            android:layout_marginTop="@dimen/dot_double"
            android:layout_marginEnd="@dimen/dot_double"
...
