...
        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="@dimen/dot_trip">

          <TextView
            android:id="@+id/stats_card_current_points"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dot_nine"
            android:text="@{item.formatCurrentPoints(context)}"
            android:textAppearance="?textAppearanceHeadline4"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="50 current points" />

          <TextView
            android:id="@+id/stats_card_lifetime_points"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:text="@{item.formatLifetimePoints(context)}"
            android:textAppearance="?textAppearanceCaption"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:visibility="@{item.inAppStatsVisibity}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_card_points_drawable" />

          <ImageView
            android:id="@+id/stats_card_no_brushings_icon"
            android:layout_width="@dimen/dot_ten"
            android:layout_height="@dimen/dot_ten"
            android:src="@drawable/ic_stats_card_brush_icon"
            android:visibility="@{item.inAppStatsVisibity}"
            app:layout_constraintBottom_toBottomOf="@id/stats_card_inapp_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/stats_card_offline_value" />

          <com.kolibree.android.app.ui.home.tab.profile.card.lifetimestats.LifetimeStatsChartView
            android:id="@+id/stats_card_brushings_chart"
            android:layout_width="@dimen/dot_ten"
            android:layout_height="@dimen/dot_ten"
            android:visibility="@{item.brushingsChartVisibility}"
...
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraints"
            android:src="@drawable/ic_stats_card_rectangle"
            android:visibility="@{item.inAppStatsVisibity}"
            app:layout_constraintBottom_toBottomOf="@id/stats_card_inapp_label"
            app:layout_constraintStart_toStartOf="@id/stats_card_offline_rectangle"
            app:layout_constraintTop_toTopOf="@id/stats_card_inapp_value"
            app:tint="?inAppBrushingsColor" />

          <TextView
            android:id="@+id/stats_card_inapp_value"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
...
